ad.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ad-svc
spec:
  type: ExternalName
  externalName: ldap://10.1.0.10
