b2b-front-office.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-office
  labels:
    app: front-office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-office
  template:
    metadata:
      labels:
        app: front-office
    spec:
      containers:
        - name: front-office
          image: 826609325644.dkr.ecr.eu-west-1.amazonaws.com/front-office:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: front-office
  labels:
    service: front-office
spec:
  type: LoadBalancer
  selector:
    app: front-office
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30000
