mongo-1.svc.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo-svc # Must use the some name as the service
subsets:
  - addresses:
      - ip: 192.198.0.2
    ports:
      - port: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
###################################
# use mongodb://mongo-svc/dbname #
#################################
