mongo-express.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deploy
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-svc
  labels:
    service: mongo-express
spec:
  type: LoadBalancer
  selector:
    app: mongo-express
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
