mongo.3.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ExternalName
  externalName: b2b.mongo.com
