mongo.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  labels:
    service: mongo
spec:
  type: LoadBalancer
  selector:
    app: mongo
  ports:
    - name: http
      protocol: TCP
      port: 27017
      targetPort: 27017
