mongo.ext.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-ext
spec:
  type: ExternalName
  externalName: b2b.mongo.com
