mongo.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ClusterIP: None
  ports:
    - name: mongo
      port: 27017

---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo
subsets:
  - addresses:
      - ip: 10.1.2.6
    ports:
      - name: mongo
        port: 27017
