mongo2.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  # type: NodePort
  ports:
    - port: 27017
      targetPort: 27017

---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo
subsets:
  - addresses:
      - ip: 10.1.2.60
    ports:
      - port: 27017
