mongo3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo3
  labels:
    app: mongo3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo3
  template:
    metadata:
      labels:
        app: mongo3
    spec:
      containers:
        - name: mongo3
          image: mongo:3
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo3
  labels:
    service: mongo3
spec:
  selector:
    app: mongo3
  ports:
    - name: http
      protocol: TCP
      port: 27017
      targetPort: 27017
