mongodb.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ExternalName
  externalName: mongo
