rabbit.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-deploy
  labels:
    app: rabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit
  template:
    metadata:
      labels:
        app: rabbit
    spec:
      containers:
        - name: rabbit
          image: rabbitmq
          ports:
            - containerPort: 5672

---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-svc
  labels:
    service: rabbit
spec:
  type: LoadBalancer
  selector:
    app: rabbit
  ports:
    - name: http
      protocol: TCP
      port: 5672
      targetPort: 5672
