rabbit.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 3021

---
apiVersion: v1
kind: Endpoints
metadata:
  name: redis-svc
subsets:
  - addresses:
      - ip: 10.1.1.8
    ports:
      - port: 3021
