redis.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    service: redis
spec:
  type: LoadBalancer
  selector:
    app: redis
  ports:
    - name: http
      protocol: TCP
      port: 6379
      targetPort: 6379
