redis.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Endpoints
metadata:
  name: redis-svc
subsets:
  - addresses:
      - ip: 10.1.2.10
    ports:
      - port: 3020
