sign-in-up.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sign-in-up-deploy
  labels:
    app: sign-in-up
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sign-in-up
  template:
    metadata:
      labels:
        app: sign-in-up
    spec:
      containers:
        - name: sign-in-up
          image: abarchibody/sign-in-up:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sign-in-up-svc
  labels:
    service: sign-in-up
spec:
  type: LoadBalancer
  selector:
    app: sign-in-up
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080 #30000-32767
