todo.api.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deploy
  labels:
    app: todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - name: todo-api
          image: abarchibody/todo.api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: todo-api-svc
  labels:
    service: todo-api
spec:
  selector:
    app: todo-api
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
