todo.app.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deploy
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: abarchibody/todo.app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  labels:
    service: todo-app
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
