ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s.b2b-firstandfuture.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-office-svc
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: back-office-svc
                port:
                  number: 80
          - path: /api/ppaid
            pathType: Prefix
            backend:
              service:
                name: ppaid-svc
                port:
                  number: 3000
          - path: /api/ppaid/socket
            pathType: Prefix
            backend:
              service:
                name: notif-svc
                port:
                  number: 3000
          - path: /api/notif
            pathType: Prefix
            backend:
              service:
                name: notif-svc
                port:
                  number: 3001
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: chat-svc
                port:
                  number: 3002
          - path: /api/chat/socket
            pathType: Prefix
            backend:
              service:
                name: chat-svc
                port:
                  number: 3002
          - path: /api/sess
            pathType: Prefix
            backend:
              service:
                name: sess-svc
                port:
                  number: 3003
          - path: /api/prov
            pathType: Prefix
            backend:
              service:
                name: prov-svc
                port:
                  number: 3004
          - path: /api/bills
            pathType: Prefix
            backend:
              service:
                name: bills-svc
                port:
                  number: 3005
          - path: /api/smedia
            pathType: Prefix
            backend:
              service:
                name: smedia-svc
                port:
                  number: 3006
          - path: /api/logs
            pathType: Prefix
            backend:
              service:
                name: logs-svc
                port:
                  number: 3007
